objects/Account.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Opportunities__c</fullName>
        <label>Brand Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Strengths__c</fullName>
        <label>Brand Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Threats__c</fullName>
        <label>Brand Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Weakness__c</fullName>
        <label>Brand Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Buying_Criteria_Last_Update__c</fullName>
        <label>Política de Compras Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Buying_Criteria__c</fullName>
        <label>Política de Compras</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Current_Year__c</fullName>
        <label>CSAT Current Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Last_Year__c</fullName>
        <label>CSAT Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Second_To_Last_Year__c</fullName>
        <label>CSAT Second To Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Unit__c</fullName>
        <label>CSAT Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CUIT_Formula__c</fullName>
        <formula>IF(LEN(TEXT(SCP_Certa_GC__CUIT__c)) = 11, 
(LEFT(TEXT(SCP_Certa_GC__CUIT__c),2) + &apos;-&apos; + MID(TEXT(SCP_Certa_GC__CUIT__c), 3,8) + &apos;-&apos; + RIGHT(TEXT(SCP_Certa_GC__CUIT__c),1)),
TEXT(SCP_Certa_GC__CUIT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CUIT__c</fullName>
        <label>CUIT</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Categoria__c</fullName>
        <label>Categoría WH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>DG</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>FO</fullName>
                </value>
                <value>
                    <fullName>EI</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>OO</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Cuenta_Para_Los_Graficos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuenta Para Los Graficos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__DomicilioRecepcionNotificaciones__c</fullName>
        <label>Domicilio de recepción de notificaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__External_Analysts_vision__c</fullName>
        <label>External Analysts vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Holding_Formula__c</fullName>
        <formula>TEXT(SCP_Certa_GC__Numero_de_Holding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ID_Cliente__c</fullName>
        <label>ID Cliente</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Micro_Industry__c</fullName>
        <label>Subsector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Centros Comerciales</fullName>
                </value>
                <value>
                    <fullName>Automotores y Camiones</fullName>
                </value>
                <value>
                    <fullName>Droguerías</fullName>
                </value>
                <value>
                    <fullName>Tienda Departamental</fullName>
                </value>
                <value>
                    <fullName>Otros Comercios</fullName>
                </value>
                <value>
                    <fullName>Supermercados</fullName>
                </value>
                <value>
                    <fullName>Alimentos y Bebidas</fullName>
                </value>
                <value>
                    <fullName>Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Combustibles y Lubricantes</fullName>
                </value>
                <value>
                    <fullName>Call Centers</fullName>
                </value>
                <value>
                    <fullName>Grupo Telefonica</fullName>
                </value>
                <value>
                    <fullName>Hardware Tecnológico</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Contenido Multimedia</fullName>
                </value>
                <value>
                    <fullName>Telcos e Internet</fullName>
                </value>
                <value>
                    <fullName>Banca</fullName>
                </value>
                <value>
                    <fullName>Instituciones financieras no bancarias</fullName>
                </value>
                <value>
                    <fullName>Medios de Pago</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Agro, Pesca y Forestación</fullName>
                </value>
                <value>
                    <fullName>Construccion</fullName>
                </value>
                <value>
                    <fullName>Industria Alimentos</fullName>
                </value>
                <value>
                    <fullName>Industria Automotriz y Autopartes</fullName>
                </value>
                <value>
                    <fullName>Industria Ligera y Manufacturas</fullName>
                </value>
                <value>
                    <fullName>Industria Metalurgica y Pesada</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industria Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Laboratorios</fullName>
                </value>
                <value>
                    <fullName>Mineria</fullName>
                </value>
                <value>
                    <fullName>Petroleo y Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Numero_de_Cliente__c</fullName>
        <label>Numero de Cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Numero_de_Holding__c</fullName>
        <label>Numero de Holding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Opportunities__c</fullName>
        <label>Other Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Strengths__c</fullName>
        <label>Other Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Threats__c</fullName>
        <label>Other Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Weakness__c</fullName>
        <label>Other Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Opportunities__c</fullName>
        <label>People Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Strengths__c</fullName>
        <label>People Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Threats__c</fullName>
        <label>People Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Weakness__c</fullName>
        <label>People Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__PicklistSegmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negocio Corporativo</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Opportunities__c</fullName>
        <label>Products/Services Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Strengths__c</fullName>
        <label>Products/Services Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Threats__c</fullName>
        <label>Products/Services Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Weakness__c</fullName>
        <label>Products/Services Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Razon_Social__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Region_WH__c</fullName>
        <label>Region WH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grandes Operadores</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Internacional</fullName>
                </value>
                <value>
                    <fullName>Prestadores</fullName>
                </value>
                <value>
                    <fullName>Telefonía</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Región SCP</label>
        <referenceTo>SCP_Certa_GC__Region__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Region_delta__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Privado</fullName>
                </value>
                <value>
                    <fullName>Gobierno</fullName>
                </value>
                <value>
                    <fullName>Pymes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Sector__c</fullName>
        <label>Ámbito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Privado</fullName>
                    <default>true</default>
                    <label>Privado</label>
                </value>
                <value>
                    <fullName>Público</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Segmento_Vertical__c</fullName>
        <label>Segmento Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administración Pública, Defensa y Seguridad Social</fullName>
                </value>
                <value>
                    <fullName>Agricultura, Ganadería, Caza y Silvicultura</fullName>
                </value>
                <value>
                    <fullName>Asociaciones e Instituciones</fullName>
                </value>
                <value>
                    <fullName>Automotores - Autopartistas</fullName>
                </value>
                <value>
                    <fullName>Automotores - Concesionarios</fullName>
                </value>
                <value>
                    <fullName>Automotores - Industria Automotriz</fullName>
                </value>
                <value>
                    <fullName>Construcción</fullName>
                </value>
                <value>
                    <fullName>Consultoras</fullName>
                </value>
                <value>
                    <fullName>Educación</fullName>
                </value>
                <value>
                    <fullName>Entretenimiento</fullName>
                </value>
                <value>
                    <fullName>Explotación de Minas y Canteras</fullName>
                </value>
                <value>
                    <fullName>Gobierno Extranjero</fullName>
                </value>
                <value>
                    <fullName>Gobierno Municipal</fullName>
                </value>
                <value>
                    <fullName>Gobierno Nacional</fullName>
                </value>
                <value>
                    <fullName>Gobierno Provincial</fullName>
                </value>
                <value>
                    <fullName>Industria Alimenticia</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industrias - Otro</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Manufactura</fullName>
                </value>
                <value>
                    <fullName>Medios de Comunicación</fullName>
                </value>
                <value>
                    <fullName>Petróleo</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Agua</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Correos</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Energía</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - GAS</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Transporte</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Salud - Clínicas, Sanatorios y Hospitales</fullName>
                </value>
                <value>
                    <fullName>Salud - Laboratorios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Context_Last_Update__c</fullName>
        <label>Ultima Actualización</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Context__c</fullName>
        <label>Contexto Estratégico</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Sub_region_delta__c</fullName>
        <label>Territorio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SCP_Certa_GC__Region_delta__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gobierno amba 1</fullName>
                </value>
                <value>
                    <fullName>Gobierno amba 2</fullName>
                </value>
                <value>
                    <fullName>Gobierno litoral</fullName>
                </value>
                <value>
                    <fullName>Gobierno mediterraneo</fullName>
                </value>
                <value>
                    <fullName>Industria</fullName>
                </value>
                <value>
                    <fullName>Finanzas</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Privado litoral</fullName>
                </value>
                <value>
                    <fullName>Privado mediterraneo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__cliente_formula__c</fullName>
        <formula>TEXT(SCP_Certa_GC__Numero_de_Cliente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero de Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__idClienteLegado__c</fullName>
        <label>Id Cliente Legado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountPaymentType__c</fullName>
        <label>Account Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Postpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoPaymentAmount__c</fullName>
        <label>Auto Payment Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Balance</fullName>
                </value>
                <value>
                    <fullName>Minimum Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoPaymentCardType__c</fullName>
        <formula>TEXT(vlocity_cmt__AutoPaymentMethodId__r.vlocity_cmt__CardType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Payment Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoPaymentMethodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__PaymentMethod__c.vlocity_cmt__AccountId__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>vlocity_cmt__PaymentMethod__c.vlocity_cmt__IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AutoPaymentMethod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillDeliveryMethod__c</fullName>
        <label>Bill Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Billing</fullName>
                </value>
                <value>
                    <fullName>Electronic Statements Online</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillFrequency__c</fullName>
        <label>Bill Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingEmailAddress__c</fullName>
        <label>Billing eMail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CLTV__c</fullName>
        <description>CLTV or customer lifetime value is a monetary amount indicating the total value of this customer since the beginning of the customer&apos;s relationship with your organization.</description>
        <inlineHelpText>Customer Lifetime Value</inlineHelpText>
        <label>CLTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CalculatedAddress__c</fullName>
        <formula>BillingStreet &amp; BR() &amp; BillingCity &amp; &quot; &quot; &amp; BillingState &amp; &quot; &quot; &amp; BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Churn__c</fullName>
        <label>Churn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactPreferences__c</fullName>
        <description>The preferred method (or methods) of communications to the parties of this account such as mail, email or phone.</description>
        <label>Contact Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerValue__c</fullName>
        <label>Customer Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DateFounded__c</fullName>
        <label>Date Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DirectoryListed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Disclosure1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Disclosure2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gaming or Gambling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Disclosure3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Money Lending/Pawning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnableAutopay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Autopay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRootResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Root Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LegalForm__c</fullName>
        <label>Legal Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>Not for Profit</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberofLocations__c</fullName>
        <description>The number of locations for this account. For informational purposes only.</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The identity of the party who is the customer or prospect of this account.</description>
        <label>Party</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PersonContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For consumer accounts where the customer is a person, this field identifies the person who is considered the customer. If the Salesforce Person Accounts feature is used, this field is optional, but would logically point to the contact record built into the Person Account.</description>
        <label>Person Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Person Accounts</relationshipLabel>
        <relationshipName>PersonAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary person to contact with any business related to this account. If the customer is a consumer, the primary contact may also be the customer but need not be. For example, the customer&apos;s assistant or spouse may be identified as the desired primary contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SLA__c</fullName>
        <description>DEPRECATED. Use vSLA.</description>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>The status of the customer&apos;s account such as active, inactive, suspended, pending or expired.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TaxID__c</fullName>
        <label>Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vCustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>